--- a/ios/AudioPlayer/AudioPlayer/en.lproj/MainStoryboard_iPhone.storyboard
+++ b/ios/AudioPlayer/AudioPlayer/en.lproj/MainStoryboard_iPhone.storyboard
@@ -166,6 +166,22 @@
             </objects>
             <point key="canvasLocation" x="957" y="848"/>
         </scene>
+        <!--Navigation Controller - Artists-->
+        <scene sceneID="Xri-eA-7AJ">
+            <objects>
+                <navigationController definesPresentationContext="YES" id="6bR-KF-BN0" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Artists" id="SLh-Zh-XVZ"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="fL9-PP-HXM">
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="1Ca-F7-Puo" kind="relationship" relationship="rootViewController" id="vFr-FY-iyS"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="MJJ-dm-lnd" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="555" y="180"/>
+        </scene>
         <!--Artists View Controller - Artists-->
         <scene sceneID="19m-gl-sUQ">
             <objects>
@@ -176,14 +192,14 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
                             <tableViewCell contentMode="scaleToFill" selectionStyle="blue" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="ArtistsCell" id="Oxh-o8-ZSZ">
-                                <rect key="frame" x="0.0" y="22" width="320" height="44"/>
+                                <rect key="frame" x="0.0" y="86" width="320" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Oxh-o8-ZSZ" id="RCi-Ao-94S">
                                     <rect key="frame" x="0.0" y="0.0" width="287" height="43"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                 </tableViewCellContentView>
                                 <connections>
-                                    <segue destination="xjP-Xl-yT8" kind="push" identifier="toDetail" id="T65-n0-k3b"/>
+                                    <segue destination="hbe-6t-pX2" kind="push" identifier="toAlbums" id="3qn-Fn-nEm"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -193,10 +209,43 @@
                         </connections>
                     </tableView>
                     <tabBarItem key="tabBarItem" title="Artists" id="C5E-Qr-0LV"/>
+                    <navigationItem key="navigationItem" id="wTD-TM-4B3"/>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="fvy-y5-yL3" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="555" y="180"/>
+            <point key="canvasLocation" x="957" y="180"/>
+        </scene>
+        <!--Artists Albums View Controller-->
+        <scene sceneID="q4v-aJ-JIs">
+            <objects>
+                <tableViewController id="hbe-6t-pX2" customClass="ArtistsAlbumsViewController" sceneMemberID="viewController">
+                    <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="Wx0-pb-sda">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="blue" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="ArtistsAlbumsCell" id="IJn-XI-0VF">
+                                <rect key="frame" x="0.0" y="86" width="320" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="IJn-XI-0VF" id="PRr-pi-qi8">
+                                    <rect key="frame" x="0.0" y="0.0" width="287" height="43"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                                <connections>
+                                    <segue destination="xjP-Xl-yT8" kind="push" identifier="toDetail" id="OuU-C0-DsR"/>
+                                </connections>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="hbe-6t-pX2" id="hxU-0W-XOk"/>
+                            <outlet property="delegate" destination="hbe-6t-pX2" id="Uyc-VJ-CLx"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" id="jZj-YR-WKZ"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="RN7-cb-VLX" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1349" y="180"/>
         </scene>
         <!--Detail View Controller-->
         <scene sceneID="TAx-Zj-PRE">
@@ -279,7 +328,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="828-F4-uSG" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1357" y="180"/>
+            <point key="canvasLocation" x="1833" y="180"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="15">
@@ -293,7 +342,7 @@
                     </tabBar>
                     <connections>
                         <segue destination="2X7-Vo-HfY" kind="relationship" relationship="viewControllers" id="2nv-A7-fV5"/>
-                        <segue destination="1Ca-F7-Puo" kind="relationship" relationship="viewControllers" id="IJI-1K-CPD"/>
+                        <segue destination="6bR-KF-BN0" kind="relationship" relationship="viewControllers" id="OFy-rn-y9f"/>
                         <segue destination="dqG-rs-5qZ" kind="relationship" relationship="viewControllers" id="3uR-2S-xRc"/>
                         <segue destination="M7z-Ne-MyC" kind="relationship" relationship="viewControllers" id="QgK-gS-uin"/>
                     </connections>
@@ -309,6 +358,6 @@
         <simulatedScreenMetrics key="destination" type="retina4"/>
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
-        <segue reference="rjT-OD-dBf"/>
+        <segue reference="OuU-C0-DsR"/>
     </inferredMetricsTieBreakers>
 </document>
