--- a/mac/DistributedClient/DistributedClient/Base.lproj/MainMenu.xib
+++ b/mac/DistributedClient/DistributedClient/Base.lproj/MainMenu.xib
@@ -686,6 +686,17 @@
                             <action selector="postNotes:" target="Voe-Tx-rLC" id="kfc-Tf-T24"/>
                         </connections>
                     </button>
+                    <button verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Slw-5r-Syr">
+                        <rect key="frame" x="14" y="279" width="205" height="32"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                        <buttonCell key="cell" type="push" title="postForDistributedObjects" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="TRP-5S-BTS">
+                            <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
+                            <font key="font" metaFont="system"/>
+                        </buttonCell>
+                        <connections>
+                            <action selector="postForDistributedObjects:" target="Voe-Tx-rLC" id="t4J-qt-cVX"/>
+                        </connections>
+                    </button>
                 </subviews>
             </view>
         </window>
