--- a/android/Nexus/res/layout/activity_main.xml
+++ b/android/Nexus/res/layout/activity_main.xml
@@ -1,7 +1,15 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/container"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="com.example.nexus.MainActivity"
-    tools:ignore="MergeRootFrame" />
+<?xml version="1.0" encoding="utf-8"?>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+	xmlns:tools="http://schemas.android.com/tools"
+	android:id="@+id/parent"
+	android:layout_width="match_parent"
+	android:layout_height="match_parent"
+	android:orientation="vertical" >
+
+	<fragment
+		android:id="@+id/masterFragment"
+		android:name="com.example.nexus.MasterFragment"
+		android:layout_width="match_parent"
+		android:layout_height="match_parent" />
+	
+</LinearLayout>
